# awm

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .tokeignore  CMakeLists.txt  README.md  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  search.html  searchindex.js  version.h.in
.doctrees/: environment.pickle  index.doctree
.doctrees/content/: command-line.doctree  configuration.doctree  contributors-resources.doctree  contributors.doctree
.github/workflows/: publish-docs.yml
_downloads/473abc7c0b6ba757f0b2360b13c453c9/: launch.json
_sources/: index.rst.txt
_sources/content/: contributors-resources.rst.txt  contributors.rst.txt
_static/: documentation_options.js
cmake/mod/: FindXCB.cmake
cmake/tc/linux/: i386-linux-clang.cmake  i386-linux-gnu.cmake
content/: command-line.html  configuration.html  contributors-resources.html  contributors.html
docs/: CMakeLists.txt  conf.py  conf_wrapper.sh  index.rst  meson.build
docs/content/: command-line.rst  configuration.rst  contributors.rst
docs/content/_dl/: launch.json  tasks.json
docs/static/css/: link-colour.css  sidebar.css
docs/templates/: footer.html
libawm/: CMakeLists.txt
libawm/include/: libawm.h
libawm/include/libawm/: hello_msg.h  htable.h  logging.h  xstr.h
libawm/lib/: hello_msg.c  htable.c  xstr.c
plugins/: CMakeLists.txt
plugins/test/: README.md  plugin.c
src/: CMakeLists.txt  main.c  meson.build  old_main.c  sighandle.c  version.h
src/data/: margin.h  rect.h
src/geom/: margin.h  rect.h
src/init/: cli.c  cli.h  config.c  config.h  main.c  plugins.c  plugins.h  sighandle.c  sighandle.h
src/manager/: atoms.c  atoms.h  client.c  client.h  clientset.c  clientset.h  drag.c  drag.h  events.c  events.h  monitor.c  monitor.h  monitorset.c  monitorset.h  randr.c  randr.h  session.c  session.h  window.c  window.h  xinerama.c  xinerama.h
src/manager/client/: client.c  client.h  clientprops.c  clientprops.h  clientset.c  clientset.h
src/manager/multihead/: monitor.c  monitor.h  monitorset.c  monitorset.h  randr.c  randr.h  xinerama.c  xinerama.h
src/manager/thread/: tpool.c  tpool.h
src/util/: genutil.c  genutil.h  geom.h  htable.h  log.h  logging.h  path.c  path.h  term.c  term.h  x_to_str.h  xstr.c  xstr.h
src/utils/: x_to_str.c
test_config/conf/: awm.conf
tests/: copy_plugins.sh
tools/: gversion.sh  run_xephyr.sh  valgrind.supp  vg.supp
util/: run_xephyr.sh  valgrind_xephyr.sh
